--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "axios": "^0.20.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-query": "^2.23.1",
+    "react-query-devtools": "^2.6.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
     "typescript": "~3.7.2"
   },
@@ -24,6 +26,11 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test"
+    }
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -35,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "husky": "^4.3.0"
   }
 }
